tests/ui/de-enum-data.stderr
error: Invalid variant: only simple enum variants and struct enums are supported
 --> tests/ui/de-enum-data.rs:5:5
  |
5 |     Variant(i32),
  |     ^^^^^^^^^^^^
