tests/ui/de-enum-data.rs
use jayson::Jayson;

#[derive(Jayson)]
enum Enum {
    Variant(i32),
}

fn main() {}
